fixed alignment ui bug with sub-btn

--- a/client/src/components/popups/ProfilePopup/index.scss
+++ b/client/src/components/popups/ProfilePopup/index.scss
@@ -56,8 +56,6 @@
 
 .sub-btn {
     display: flex;
-    align-items: center;
-    justify-content: center;
     white-space: nowrap;
     gap: 5px;
     font-size: 15px;
